<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <Button
            android:id="@+id/updateProfiButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_profile"
            android:textAllCaps="false" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <Button
            android:id="@+id/requestFeatureButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_feature"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/supportButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/support"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/changeLogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_log"
            android:textAllCaps="false" />

        <View
            android:id="@+id/divider8"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textAllCaps="false" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>